# synthetic

./: .gitignore  GenSeq.lean  Main.lean  Proofs.lean  README.md  Taskfile.yml  flake.nix  lake-manifest.json  lakefile.toml  supervisord.conf  supervisord.conf.template
GenSeq/: Basic.lean  Defs.lean  Example.lean  Grammar.lean  Process.lean  Proofs.lean  RepairFunctions.lean  Semantics.lean
GenSeqClient/: genseq_client.py
lean/gen-seq/: .gitignore  GenSeq.lean  Main.lean  README.md  Taskfile.yml  lake-manifest.json  lakefile.toml  supervisord.conf
lean/gen-seq/.github/workflows/: blueprint.yml  lean_action_ci.yml
lean/gen-seq/GenSeq/: Basic.lean  Example.lean  Grammar.lean  Semantics.lean
python/: basic.ebnf  full.ebnf  parse.py  pyproject.toml
