[project]
name = "parsr"
version = "0.1.0"
description = ""
authors = [
    {name = "Joe Stubbs",email = "joestubbs5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark (>=1.2.2,<2.0.0)",
    "ipython (>=9.4.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
